fixed project card overflow issue on mobile

--- a/_sass/homepage-style.scss
+++ b/_sass/homepage-style.scss
@@ -194,6 +194,7 @@ main {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    padding: 30px 3%;
 }
 
 .project-box {
